apps/iot/home-assistant/base/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:95nhn2+8bE7z8Or+DQttWvrWCK+YmA==,iv:FmvBpAvN0/YKgDhb1q6CmLjApzbSP8Zzk/C7rVeAGa0=,tag:N2qLpy6gEmTM0uhq3tj2aA==,type:str]
        kubernetes.io/ingress.class: traefik-external
    name: home-assistant-proxy
    namespace: iot
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:MnGuYK9w2OP5yDiYGUAaQGYqLcHNV86RFi90tQI8lZl6mpI=,iv:nEaAxjepz0DuKu0RHmN9Nz2Q2R3GsFKg9nruSL5KmFI=,tag:tlxiiQnomNNhOpmuwftHRw==,type:str]
          middlewares:
            - name: security
              namespace: traefik
          services:
            - kind: TraefikService
              name: home-assistant-proxy
              namespace: iot
    tls:
        domains:
            - main: ENC[AES256_GCM,data:QnUBlX7xY/Jd5cgbaVZpml7QbP+/IA==,iv:nhXTqWl/3zpB1bqvtgTqba+h3GXmV8ajOqRpufDTCLw=,tag:s/7dg+N0zqXmPxIZvn+tcg==,type:str]
              sans:
                - ENC[AES256_GCM,data:x20VnnPvdskBOtNXAh3vtydibQlBL3U=,iv:q9RcSPF4nc1mv6FHcVBw5GH9s9x3pjTpg5OAYY/rZUY=,tag:vjwMRBPESEnkw1MtKqMFnw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: home-assistant-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3MktGMlN2bjZJMTFMajV4
[...]
            w8c5qHh01uQHiHi1U4QFQUizRjNVib9Gu0ehqrwESX3eqgfzKH5jww==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-08-22T20:52:27Z"
    mac: ENC[AES256_GCM,data:eliQO3RKiY85KE85gG7hlwdg4yljTezalf94Pv0LjMggD1sXKDg2UbXTutu1E2J4wTlaR8v26OvQfr74Mnb9/3zrZqZUWqNbWY8a7AkCOZSrAaJyEIIzqKS+INyv+YvIQyg1V9Tpm542FcxaaPYAD442IXnAEOTF/JSjs/twBG4=,iv:RLt4/uaUwEoIW4bI1Nyta+GbDRiwQhGu9H0HzLP0gQg=,tag:qIQ8t6SAzwOEAiKYtCdbNw==,type:str]
    pgp:
        - created_at: "2024-06-22T20:24:01Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//ckdUFF47JENHLxFJOHZDfsPBDa38fqH2UMJ+x0+OW12I
[...]
            =3F81
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
